# pytest_framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  debug.yml
conf/: config.py  constants.py  settings.yaml
data/: api_test_cases.yaml  test_users.json
docs/: README.md
docs/api-reference/: core.md
docs/architecture/: components.md  design-principles.md  extension.md  overview.md
docs/best-practices/: test-organization.md
docs/faq/: README.md
docs/quick-start/: README.md  first-test.md  installation.md
docs/user-guide/: advanced-features.md  assertions.md  basic-usage.md  configuration.md  data-driven.md  jmespath-guide.md  mock-server.md  performance.md
output/junit/: report.xml
practice/: thread_demo.py
src/client/: base_auth.py  base_client.py  validatable.py
src/client/flask_client/: enums.py  flask_auth.py  flask_client.py  flask_validatable.py
src/model/: async_task.py  auto_pytest.py  case.py  modelsbase.py
src/pytest_result_sender/: plugin.py
src/utils/: assertion.py  data_driver.py  datasovle.py  dict_tools.py  environment.py  file_operation.py  jmespath_helper.py  log_moudle.py  mock_server.py  performance.py  util.py
test/: conftest.py
test_lib/client/flask_client/: exceptions.py
test_lib/utils/: adb_tools.py  datasovle.py  date_operation.py  dict_tools.py  log_moudle.py  util.py
tests/: anlaysis.py  clog.py  conftest.py  example.py  request_demo.py  test_demo.py  test_my_first_api.py
tests/examples/: test_complete_workflow.py  test_enhanced_features.py
tests/test_goods/: test_good_add_del.py  test_update_good.py
tests/test_user/: test_login_logout.py  test_user_add_del.py
